--- a/StartAudioInTheBackground/StartAudioInTheBackground.csproj
+++ b/StartAudioInTheBackground/StartAudioInTheBackground.csproj
@@ -107,13 +107,16 @@
     <Compile Include="audio\naudio\IWaveBuffer.cs" />
     <Compile Include="audio\naudio\WaveBuffer.cs" />
     <Compile Include="audio\WaveBufferReader.cs" />
-    <Compile Include="BackgroundTask.cs" />
-    <Compile Include="JumpListMenu.cs" />
+    <Compile Include="CloseAppDialog.xaml.cs">
+      <DependentUpon>CloseAppDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Toasts.cs" />
+    <Compile Include="Utils\JumpListMenu.cs" />
+    <Compile Include="Utils\KeyboardInput.cs" />
+    <Compile Include="Utils\Toasts.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -176,6 +179,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="CloseAppDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
