--- a/StartAudioInTheBackground/StartAudioInTheBackground.csproj
+++ b/StartAudioInTheBackground/StartAudioInTheBackground.csproj
@@ -113,6 +113,9 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MicPermissionDialog.xaml.cs">
+      <DependentUpon>MicPermissionDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\JumpListMenu.cs" />
     <Compile Include="Utils\KeyboardInput.cs" />
@@ -184,6 +187,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="MicPermissionDialog.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
